woohoo layout bug resolved

--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -109,6 +109,11 @@ header {
 }
 
 // Search highlight
+span.ds-dropdown-menu {
+	@media screen and (min-width:768px) and (max-width:2500px) {
+		margin-top: 35px !important;
+	}
+}
 .ds-dataset-1 {
 	span.ds-suggestions {
 		@media screen and (min-width:0px) and (max-width:768px) {  
@@ -129,4 +134,30 @@ header {
   border-right-color: $orange-lighter;
   color: $gray-darkest;
   background-color: $orange-lightest;
+}
+.algolia-autocomplete {
+	width: 100%;
+}
+.algolia-autocomplete .aa-input, .algolia-autocomplete .aa-hint {
+	width: 100%;
+}
+.algolia-autocomplete .aa-hint {
+	color: #999;
+}
+.algolia-autocomplete .aa-dropdown-menu {
+	width: 100%;
+	background-color: #fff;
+	border: 1px solid #999;
+	border-top: none;
+}
+.algolia-autocomplete .aa-dropdown-menu .aa-suggestion {
+	cursor: pointer;
+	padding: 5px 4px;
+}
+.algolia-autocomplete .aa-dropdown-menu .aa-suggestion.aa-cursor {
+	background-color: #B2D7FF;
+}
+.algolia-autocomplete .aa-dropdown-menu .aa-suggestion em {
+	font-weight: bold;
+	font-style: normal;
 }
